dragenter & dragleave events do not include relatedTarget in the event object

dragenter & dragleave events do not include relatedTarget in the event object
https://bugs.webkit.org/show_bug.cgi?id=66547

Reviewed by NOBODY (OOPS!).

This is to align Webkit with Blink / Chrome and Gecko / Firefox also with Web Specifications.

Merge - https://chromium.googlesource.com/chromium/src.git/+/611466a4430557a67478d236ac57dc649b6eee99

Webkit use to set the relatedTarget of boundary
drag events to null. This is not what the spec
says and developers expect.

This commit fix this
by setting the relatedTarget to the element that
the pointer just left/entered (based on the event).

* Source/WebCore/page/EventHandler.h: Update 'dispatchDragEvent' to have "relatedTarget"
* Source/WebCore/page/EventHandler.cpp:
(EventHandler::handlePasteGlobalSelection): Add "relatedTarget"
(EventHandler::dispatchDragEvent): Add logic about "relatedTarget" and updated to return rather than "0" to "relatedTarget"
(EventHandler::DragTargetResponse EventHandler::updateDragAndDrop): Update response to add "dragTarget" and "nullptr"
(EventHandler::DragTargetResponse EventHandler::cancelDragAndDrop): Update response of "nullptr"